fixes #151, slightly wider options box that can get automatically gets a bit bigger, oversize options now break. A few other minor styling fixes on STORIES page - larger Headings and pic and chart spacing sharpened up

--- a/VoxPop/Site/Libraries/login-signup-modal-window/css/style.css
+++ b/VoxPop/Site/Libraries/login-signup-modal-window/css/style.css
@@ -387,7 +387,7 @@ ul.cd-switcher {
 }
 
 .cd-form .cd-error-message {
-    display: inline-block;
+    display:inline-block inline-block;
     position: absolute;
     left: -5px;
     bottom: -35px;
